[gd_scene load_steps=2 format=3 uid="uid://bb00u6w7re17v"]

[ext_resource type="Script" path="res://godot/scenes/UI/recipes/recipe_selector.gd" id="1_c80am"]

[node name="recipe_selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c80am")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -52.0
offset_right = 42.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="storer_selected" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="storer_info" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "storer_info"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="recipe_selected" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="recipe_info" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "recipe_info"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"
